# max-plus-algebra-cpp-lib

./: .clang-format  .gitignore  BUILD.bazel  LICENSE  README.md  max_plus_lib.cpp  max_plus_lib.hpp  max_plus_lib_test.cpp
libmaxplus/include/: libmaxplus.hh  libmaxplus.hpp
libmaxplus/src/: libmaxplus.cc  libmaxplus.cpp
libmaxplus/test/: test_all.cc  test_all.cpp
