package(default_visibility = ["//visibility:public"])

cc_library(
    name = "libmaxplus",
    srcs = glob(["libmaxplus/src/*.cpp", "libmaxplus/include/*.hpp"]),
    hdrs = ["libmaxplus/include/libmaxplus.hpp"],
    includes = ["libmaxplus/include"],
)

cc_test(
    name = "libmaxplus_test_all",
    size = "small",
    srcs = ["libmaxplus/test/test_all.cpp"],
    deps = [":libmaxplus"],
)
